assets/base.css
body {
  padding: 0;
  margin: 0;
  font-family: roboto, sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.938rem;
  color: #434342;
}

h1 {
  font-size: 1.313rem;
  font-family: lora, serif;
  font-weight: 400;
  font-style: normal;
  margin-bottom: 3rem;
}

p {
  white-space: pre-line;
}

.buttons a {
  padding: 0.5rem 2.5rem;
  border: none;
  font-family: lora, serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9rem;
  color: #434342;
  text-decoration: none;
}

.roboto-bold {
  font-family: roboto, sans-serif;
  font-weight: 700;
  font-style: normal;
  margin-bottom: 0;
}

.buttons {
  gap: 1rem;
  display: inline-flex;
}

.primary-button {
  background-color: #e9c8a7;
}

.secondary-button {
  background-color: #f6eddc;
}

